--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,11 +12,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApplication"
+        android:name=".base.MyApplication"
         android:theme="@style/Theme.studywithme"
         tools:targetApi="31">
         <activity
-            android:name=".IntroduceActivity"
+            android:name=".introduce.IntroduceActivity"
             android:exported="false"
             android:label="@string/title_activity_introduce"
             android:theme="@style/Theme.studywithme.NoActionBar">
@@ -25,14 +25,14 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".main.LoginActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
         <activity
-            android:name=".SplashActivity"
+            android:name=".splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,7 +45,7 @@
                 android:value="" />
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name=".main.MainActivity"
             android:exported="true">
             <meta-data
                 android:name="android.app.lib_name"
